src/test/deca/syntax/invalid/lexer/oracle/ident2.deca
0sdfsdf

qsdfsqdfsqdfsqdfsqdfqsd______________ /*Celui ci est valide héhé !*/